--- a/term/src/main/res/layout/term_activity.xml
+++ b/term/src/main/res/layout/term_activity.xml
@@ -16,7 +16,7 @@
 */
 -->
 
-<jackpal.androidterm.TermViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
+<ze00.PvzCheater.TermViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/view_flipper"
     android:layout_width="fill_parent" 
     android:layout_height="fill_parent"
